; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_tmarshal.c_NonOleAutomation_GetTypeInfo.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_tmarshal.c_NonOleAutomation_GetTypeInfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LIBID_TestTypelib = common dso_local global i32 0, align 4
@LOCALE_NEUTRAL = common dso_local global i32 0, align 4
@IID_INonOleAutomation = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @NonOleAutomation_GetTypeInfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @NonOleAutomation_GetTypeInfo() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = load i32, i32* @LOCALE_NEUTRAL, align 4
  %6 = call i32 (i32*, i32, i32, ...) @LoadRegTypeLib(i32* @LIBID_TestTypelib, i32 2, i32 5, i32 %5, i32** %2)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @ok_ole_success(i32 %7, i32 (i32*, i32*, i32**)* bitcast (i32 (i32*, i32, i32, ...)* @LoadRegTypeLib to i32 (i32*, i32*, i32**)*))
  %9 = load i32, i32* %3, align 4
  %10 = call i64 @SUCCEEDED(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %20

12:                                               ; preds = %0
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @ITypeLib_GetTypeInfoOfGuid(i32* %13, i32* @IID_INonOleAutomation, i32** %4)
  store i32 %14, i32* %3, align 4
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @ok_ole_success(i32 %15, i32 (i32*, i32*, i32**)* @ITypeLib_GetTypeInfoOfGuid)
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @ITypeLib_Release(i32* %17)
  %19 = load i32*, i32** %4, align 8
  store i32* %19, i32** %1, align 8
  br label %21

20:                                               ; preds = %0
  store i32* null, i32** %1, align 8
  br label %21

21:                                               ; preds = %20, %12
  %22 = load i32*, i32** %1, align 8
  ret i32* %22
}

declare dso_local i32 @LoadRegTypeLib(i32*, i32, i32, ...) #1

declare dso_local i32 @ok_ole_success(i32, i32 (i32*, i32*, i32**)*) #1

declare dso_local i64 @SUCCEEDED(i32) #1

declare dso_local i32 @ITypeLib_GetTypeInfoOfGuid(i32*, i32*, i32**) #1

declare dso_local i32 @ITypeLib_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
